[package]
name = "spow"
version = "0.5.0"
edition = "2021"
rust-version = "1.70.0"
license = "Apache-2.0"
authors = ["Sebastian Dobe <sebastiandobe@mailbox.org"]
categories = ["algorithms", "wasm", "web-programming"]
keywords = ["hash", "security", "utility", "wasm", "web"]
description = "Proof of Work for the Server and Client + WASM"
readme = "README.md"
repository = "https://github.com/sebadob/spow"

[profile.test]
inherits = "release"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-musl", "aarch64-unknown-linux-musl", "wasm32-unknown-unknown"]

[features]
default = []

asm = ["sha2/asm"]
client = []
server = [
    "dep:base64",
    "dep:chrono",
    "dep:serde",
    "dep:thiserror",
    "dep:getrandom",
]

[dependencies]
# common deps
nom = "8"
sha2 = { version = "0.10.8", features = [] }

# server
base64 = { version = "0.22.1", optional = true }
chrono = { version = "0.4.31", optional = true }
serde = { version = "1.0.193", optional = true, features = ["derive"] }
thiserror = { version = "2", optional = true }

# std deps
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
getrandom = { version = "0.3" }

# wasm deps
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", optional = true, features = ["wasm_js"] }


[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "main"
harness = false
