[package]
name = "wasm-builder"
version = "0.1.0"
authors = ["Sebastian Dobe <sd@netit-services.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"

[features]
server = ["spow/server"]
client = ["spow/client"]
debug = ["dep:console_error_panic_hook"]

[dependencies]
spow = { path = "..", features = [] }
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.39"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
